add: measure performance on the test set and better description of a process

--- a/notebooks/01_shallow_classifier.ipynb
+++ b/notebooks/01_shallow_classifier.ipynb
@@ -6,28 +6,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
     "import numpy as np\n",
-    "import cv2\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If `SAMPLE` is `None` the entire dataset will be used during training.\n",
+    "`N_CHANNELS` controls the number of channels in images (for `grayscale` use `1`, for `RGB` use `3`).\n",
+    "`EXPERIMENT_NAME` defines the name of a file that stores information about results of Bayesian optimization of hyperparameters."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAMPLE = 5000"
+    "SAMPLE = None\n",
+    "N_CHANNELS = 1\n",
+    "EXPERIMENT_NAME = 'shallow_clf_tpe_pipeline_cpu_overfit_penalty'"
    ]
   },
   {
@@ -36,7 +37,7 @@
    "source": [
     "# Data preparation\n",
     "\n",
-    "We start from loading images into memory."
+    "We start from loading data into memory."
    ]
   },
   {
@@ -52,7 +53,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Images in both, training and test sets, have different, unregular sizes. Thus, we will use transformers which first resize image to `256` px and then randomly crop them to target dimension of `224x224` px. After that, images will be converted to `torch.Tensors`."
+    "Images (both in training and test sets) have different, unregular sizes. Thus, we will use transformations that will first scale the images and then crop (randomly) a square-shaped fragments. After that, images will be converted to `torch.Tensors`.\n",
+    "\n",
+    "Note that:\n",
+    "\n",
+    "* `transforms.Resize` will resize the input PIL Image to given size. If size is an int, smaller edge of the image will be mathced to this number, ie. if `height > width`, then image will be rescaled to `(size * height / width, size)`,\n",
+    "* `transforms.RandomCrop` will crop the given PIL Image at a random location. If size is an int instead of sequence like `(height, width)`, a square crop `(size, size)` is made."
    ]
   },
   {
@@ -64,8 +70,9 @@
     "from torchvision import transforms\n",
     "\n",
     "simple_transform = transforms.Compose([\n",
-    "    transforms.Resize(256),\n",
-    "    transforms.RandomCrop(224),\n",
+    "    transforms.Grayscale(),\n",
+    "    transforms.Resize(32),\n",
+    "    transforms.RandomCrop(32),\n",
     "    transforms.ToTensor()\n",
     "])"
    ]
@@ -74,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, we load the images in mini-batches and calculate the mean and standard deviations for each of the RGB channels. Obtained values will be used during normalization of inputs which will be passed do `SVM` and `CNN`."
+    "Then, we will create an object that will allow us to load images in *mini-batches*. For each channel (or a single channel in case of grayscale images) we will calculate mean and standard deviation. This values will be used to normalize the input data."
    ]
   },
   {
@@ -93,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that even for small images (ie. `(224, 224, 3)`) calculating means of each RGB channel for dataset of reasonable size (ie. `17k`) would required operating on vectors of size `17000 * 224 * 224 * 3`. In order to increase the speed of calculation we performed calculations over mini-batches."
+    "Notice that even for small images, ie. `(224, 224, 3)` calculating means of each channel requires performing operations on vectors of sizes: `n_samples * 224 * 224 * 3` (on an ordinary laptop problems with lack of memory may occur). Thus, for benchmark purposes we used smaller images with output shape of `(32, 32, 1)`."
    ]
   },
   {
@@ -109,22 +116,22 @@
     "counter = 0\n",
     "for data in dataset.loader(batch_size=170):\n",
     "    images, _ = data\n",
-    "    for channel in [0, 1, 2]:\n",
+    "    for channel in list(range(N_CHANNELS)):\n",
     "        means[channel].append(images[:, channel, :, :].mean().item())\n",
     "        stds[channel].append(images[:, channel, :, :].std().item())\n",
     "    counter += 1\n",
     "    if counter % 10 == 0:\n",
-    "        print('Mean calculated for {n} batches'.format(n=counter / (17000 / 170)))"
+    "        print('Mean calculated for {n} batches'.format(n=counter / (17000 / 170)))\n",
+    "# save means and stds\n",
+    "means = [np.mean(means[channel]) for channel in list(range(N_CHANNELS))]\n",
+    "stds = [np.mean(stds[channel]) for channel in list(range(N_CHANNELS))]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "means = [np.mean(means[channel]) for channel in [0, 1, 2]]\n",
-    "stds = [np.mean(stds[channel]) for channel in [0, 1, 2]]"
+    "Then, we add a transformation that normalizes the input images and load into memory the number of images defined in a variable `SAMPLE` (or the entire dataset if `SAMPLE` is `None`."
    ]
   },
   {
@@ -134,8 +141,9 @@
    "outputs": [],
    "source": [
     "simple_transform = transforms.Compose([\n",
-    "    transforms.Resize(256),\n",
-    "    transforms.RandomCrop(224),\n",
+    "    transforms.Grayscale(),\n",
+    "    transforms.Resize(32),\n",
+    "    transforms.RandomCrop(32),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=means, std=stds)\n",
     "])"
@@ -152,11 +160,11 @@
     "    transform=simple_transform\n",
     ")\n",
     "if SAMPLE:\n",
-    "    X_train, y_train = dataset_normalized.load_all_images()\n",
+    "    X_train, y_train = dataset_normalized.load_all_images(img_shape=(32, 32, 1))\n",
     "    random_sample_idx = np.random.randint(low=0, high=len(X_train), size=SAMPLE)\n",
     "    X_train, y_train = X_train[random_sample_idx], y_train[random_sample_idx]\n",
     "else:\n",
-    "    X_train, y_train = dataset_normalized.load_all_images()"
+    "    X_train, y_train = dataset_normalized.load_all_images(img_shape=(32, 32, 1))"
    ]
   },
   {
@@ -181,28 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Shallow classifier"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ogranicz zbiór danych na potrzeby testów.\n",
-    "\n",
-    "    idx = np.random.randint(low=0, high=17000, size=17000)\n",
-    "    X_train, y_train = images[idx], labels[idx]\n",
-    "\n",
-    "    del(images, labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tmle.transformers import HOGTransformer"
+    "# Shallow Classifier"
    ]
   },
   {
@@ -212,17 +199,57 @@
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.svm import LinearSVC\n",
-    "\n",
+    "from tmle.transformers import HOGTransformer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.svm import LinearSVC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Classes are imbalanced."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.bincount(y_train.astype('int64')) / y_train.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start with the definition of a simple `Pipeline`. It will be used for presentation purposes. With ***default*** values of *hyperparameters* we encounter a problem of overfitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pipeline = Pipeline(steps=[\n",
     "    ('hog', HOGTransformer(\n",
+    "        img_shape=(32, 32),\n",
     "        orientations=9,\n",
-    "        pixels_per_cell=(12, 12),\n",
-    "        cells_per_block=(1, 1))\n",
+    "        pixels_per_cell=(8, 8),\n",
+    "        cells_per_block=(2, 2))\n",
     "    ),\n",
+    "    ('scaler', StandardScaler()),\n",
     "    ('svm', LinearSVC())\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fit `pipeline` to training set."
    ]
   },
   {
@@ -236,6 +263,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make predictions on training set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -246,12 +280,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Measure performance with `balanced_accuracy_score` and prepare `classification_report`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, classification_report, roc_auc_score, balanced_accuracy_score\n",
+    "from sklearn.metrics import classification_report, balanced_accuracy_score\n",
     "\n",
     "print('Accuracy: {acc:.5f}. Balanced accuracy: {bal_acc:.5f}'.format(\n",
     "    acc=accuracy_score(y_train, y_train_preds),\n",
@@ -269,6 +310,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load test set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -278,8 +326,15 @@
     "    path_to_data='../data/cpu/test/',\n",
     "    transform=simple_transform\n",
     ")\n",
-    "X_test, y_test = test_dataset.load_all_images()\n",
+    "X_test, y_test = test_dataset.load_all_images(img_shape=(32, 32, 1))\n",
     "y_test_preds = pipeline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Measure performance on test set."
    ]
   },
   {
@@ -298,6 +353,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For sure, performance of the model can be better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hyperparameters tuning"
    ]
   },
@@ -305,11 +367,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start from definition of `Pipeline` which will be fed with parameters sampled from *hyperparameters space*. Our `Pipeline` consists of three steps:\n",
+    "We start from definition of `Pipeline` which will be fed with hyperparameters values sampled from space defined in next subsection. Our `Pipeline` takes three steps:\n",
     "\n",
-    "* `HOGTransformer`: implements method of transforming images into features vector based on histograms of oriented gradients,\n",
-    "* `PCA`: reduces dimensionality of features vector outputed by `HOGTransformer`. In some scenarios the final features vector may have dimensions that will be hard to train on single-CPU machine,\n",
-    "* `LinearSVC`: classifies the images. It scales good in terms of both: number of instances and number of features. We will be optimizing the value of *regularization* parameters and experimenting with different loss functions."
+    "* `HOGTransformer` which will convert images into feature vector based on histograms of oriented gradients,\n",
+    "* `StandardScaler` which scales output of `HOGTransformer` to avoid attributes in greater numeric ranges dominating those in smaller numeric ranges (however, the `HOG` should be on a similar scale),\n",
+    "* `LinearSVC` which will classify the images. It scales good in terms of both: number of instances and number of features."
    ]
   },
   {
@@ -319,8 +381,8 @@
    "outputs": [],
    "source": [
     "pipe = Pipeline(steps=[\n",
-    "    ('hog', HOGTransformer()),\n",
-    "    ('pca', PCA()),\n",
+    "    ('hog', HOGTransformer(img_shape=(32, 32))),\n",
+    "    ('scaler', StandardScaler()),\n",
     "    ('svm', LinearSVC(max_iter=50000))\n",
     "])"
    ]
@@ -345,12 +407,12 @@
     "\n",
     "space = dict()\n",
     "space['hog__orientations'] = hp.choice('orientations', [9, 12, 18])\n",
-    "space['hog__pixels_per_cell'] = hp.choice('pixels_per_cell', [(8, 8), (12, 12), (24, 24)])\n",
+    "space['hog__pixels_per_cell'] = hp.choice('pixels_per_cell', [(4, 4), (8, 8)])\n",
     "space['hog__cells_per_block'] = hp.choice('cells_per_block', [(1, 1), (2, 2), (4, 4)])\n",
     "space['hog__block_norm'] = hp.choice('block_norm', ['L1', 'L2-Hys'])\n",
-    "space['pca__n_components'] = hp.choice('n_components', np.arange(50, 550, 50))\n",
     "space['svm__loss'] = hp.choice('loss', ['hinge', 'squared_hinge'])\n",
-    "space['svm__C'] = hp.uniform('C', 0.001, 5)"
+    "space['svm__class_weight'] = hp.choice('class_weight', [None, 'balanced'])\n",
+    "space['svm__C'] = hp.uniform('C', 0.0001, 5)"
    ]
   },
   {
@@ -359,10 +421,10 @@
    "source": [
     "## Conduct experiments\n",
     "\n",
-    "We use:\n",
+    "We will conduct experiments in conditions of imbalanced dataset. Therefore, we will use:\n",
     "\n",
-    "* `sklearn.model_selection.StratifiedKFold` because of class imbalance present in the training set (we set the `n_splits` to `3`),\n",
-    "* `sklearn.metrics.balanced_accuracy_score` to measure the performance of given classifier on both: training and validation sets. We try to minimize the objective with return score calculated as `1 - balanced_accuracy_score(validation_set)`."
+    "* `sklearn.model_selection.StratifiedKFold` in order to preserve the comparable share of instances from given classes in both: training and validation sets,\n",
+    "* `sklearn.metrics.balanced_accuracy_score` to measure a performance of given classifier on both: training and validation sets. It is defined as the average of recall obrained on each class. The best value is 1 and the worst value is 0. Our loss function was defined as: `1 - mean_balanced_accuracy_score(X_validation)` (when `overfit_penalty` is not `None` then constant is added to losses when `mean_balanced_accuracy_score(X_train) - mean_balanced_accuracy_score(X_validation) > overfit_penalty`."
    ]
   },
   {
@@ -383,9 +445,92 @@
     "    X_train,\n",
     "    y_train,\n",
     "    experiments_path='../experiments/',\n",
-    "    experiments_name='shallow_clf_tpe_pipeline',\n",
-    "    max_evals=5\n",
+    "    experiments_name=EXPERIMENT_NAME,\n",
+    "    max_evals=500,\n",
+    "    overfit_penalty=0.1\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Measure performance on test set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will load information about the process of parameters optimization. We will use the best set of parameters to train classifier on whole training set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "TRIALS_PATH = os.path.join('../experiments/', '.'.join([EXPERIMENT_NAME, 'hpopt']))\n",
+    "\n",
+    "with open(TRIALS_PATH, 'rb') as trials:\n",
+    "    trials = pickle.load(trials)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following dictionary shows the best set of parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_optim.space_eval(trials.best_trial)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will update `pipe` with *hyperparameters* values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe.set_params(**clf_optim.space_eval(trials.best_trial))\n",
+    "pipe.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And measure accuracy on train and test set (note: test set is balanced, hence the simple accuracy score can be used to assess the performance of the model)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x_i, y_i in zip([X_train, X_test], [y_train, y_test]):\n",
+    "    y_pred = pipe.predict(x_i)\n",
+    "    print('Accuracy: {acc:.5f}. Balanced accuracy: {bal_acc:.5f}'.format(\n",
+    "        acc=accuracy_score(y_i, y_pred),\n",
+    "        bal_acc=balanced_accuracy_score(y_i, y_pred)\n",
+    "    ))"
    ]
   }
  ],
