add: confusion matrix plot generated with tmle

--- a/notebooks/01_shallow_classifier.ipynb
+++ b/notebooks/01_shallow_classifier.ipynb
@@ -140,8 +140,8 @@
       "Mean calculated for 0.8 batches\n",
       "Mean calculated for 0.9 batches\n",
       "Mean calculated for 1.0 batches\n",
-      "CPU times: user 35.3 s, sys: 1.05 s, total: 36.4 s\n",
-      "Wall time: 37.4 s\n"
+      "CPU times: user 45.5 s, sys: 4.6 s, total: 50.1 s\n",
+      "Wall time: 1min 2s\n"
      ]
     }
    ],
@@ -305,43 +305,30 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 2min 27s, sys: 1.45 s, total: 2min 28s\n",
-      "Wall time: 2min 37s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lukaszambroziak/anaconda3/envs/tmle/lib/python3.6/site-packages/sklearn/svm/base.py:931: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "     steps=[('hog', HOGTransformer(block_norm='L2-Hys', cells_per_block=(2, 2),\n",
-       "        feature_vector=True, img_shape=(32, 32), multichannel=None,\n",
-       "        orientations=9, pixels_per_cell=(8, 8), transform_sqrt=False,\n",
-       "        visualize=False)), ('scaler', StandardScaler(copy=True, with_mean=True, with_st...ax_iter=1000,\n",
-       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
-       "     verbose=0))])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
-    "pipeline.fit(X_train, y_train)"
+    "%%skip $IMPATIENCE\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "# save model\n",
+    "from joblib import dump\n",
+    "dump(pipeline, '../models/shallow_clf_starter.joblib')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load model from disk."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from joblib import load\n",
+    "pipeline = load('../models/shallow_clf_starter.joblib')"
    ]
   },
   {
@@ -353,15 +340,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.08 s, sys: 31.3 ms, total: 7.12 s\n",
-      "Wall time: 7.12 s\n"
+      "CPU times: user 8.04 s, sys: 119 ms, total: 8.16 s\n",
+      "Wall time: 8.31 s\n"
      ]
     }
    ],
@@ -379,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +633,7 @@
        " 'svm__loss': 'squared_hinge'}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,22 +651,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 18min 30s, sys: 3.22 s, total: 18min 34s\n",
-      "Wall time: 18min 44s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
+    "%%skip $IMPATIENCE\n",
     "pipe.set_params(**clf_optim.space_eval(trials.best_trial))\n",
-    "pipe.fit(X_train, y_train)"
+    "pipe.fit(X_train, y_train)\n",
+    "# save model\n",
+    "from joblib import dump\n",
+    "dump(pipe, '../models/shallow_clf.joblib')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load model from disk."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from joblib import load\n",
+    "pipe = load('../models/shallow_clf.joblib')"
    ]
   },
   {
@@ -691,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -721,21 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "cm_test = confusion_matrix(\n",
-    "    y_true=y_test,\n",
-    "    y_pred=pipe.predict(X_test)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -752,28 +736,11 @@
     }
    ],
    "source": [
-    "LABELS = [\n",
-    "    'bird', 'boat', 'cat', 'dog', 'flower', 'frog',\n",
-    "    'jumbojet', 'mushroom', 'sportscar', 'tree'\n",
-    "]\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from tmle.visualizations import plot_confusion_matrix\n",
     "\n",
-    "f, ax = plt.subplots(figsize=(10, 10))\n",
-    "ax.imshow(cm_test)\n",
-    "ax.set(\n",
-    "    xticks=np.arange(10),\n",
-    "    yticks=np.arange(10),\n",
-    "    xticklabels=LABELS,\n",
-    "    yticklabels=LABELS,\n",
-    "    ylabel='True label',\n",
-    "    xlabel='Predicted label'\n",
-    ")\n",
-    "fmt = '.2f'\n",
-    "for i in range(cm_test.shape[0]):\n",
-    "    for j in range(cm_test.shape[1]):\n",
-    "        ax.text(j, i, format(confusion_matrix_testset[i, j], fmt),\n",
-    "               ha='center', va='center', color='white')\n",
-    "f.tight_layout()\n",
-    "plt.show()"
+    "cm_test = confusion_matrix(y_true=y_test, y_pred=pipe.predict(X_test))\n",
+    "plot_confusion_matrix(cm_test)"
    ]
   }
  ],
