update: restart kernel and run all

--- a/notebooks/01_shallow_classifier.ipynb
+++ b/notebooks/01_shallow_classifier.ipynb
@@ -6,7 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext skip_cell"
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Computations performed in this notebook may take hours. Therefore, we have implemented notebook extension called `skip_cell` which could be used to omit certain cells. We defined global variables `IMPATIENCE` which should be set to `True` when you want to load data and/or models from disk."
    ]
   },
   {
@@ -15,9 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "%load_ext skip_cell"
    ]
   },
   {
@@ -140,8 +147,8 @@
       "Mean calculated for 0.8 batches\n",
       "Mean calculated for 0.9 batches\n",
       "Mean calculated for 1.0 batches\n",
-      "CPU times: user 45.5 s, sys: 4.6 s, total: 50.1 s\n",
-      "Wall time: 1min 2s\n"
+      "CPU times: user 45 s, sys: 3.9 s, total: 48.9 s\n",
+      "Wall time: 59.2 s\n"
      ]
     }
    ],
@@ -347,8 +354,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.04 s, sys: 119 ms, total: 8.16 s\n",
-      "Wall time: 8.31 s\n"
+      "CPU times: user 7.19 s, sys: 75.8 ms, total: 7.27 s\n",
+      "Wall time: 7.28 s\n"
      ]
     }
    ],
